--- a/src/main/webapp/clientOrderDetail.html
+++ b/src/main/webapp/clientOrderDetail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+\<!DOCTYPE html>
 <html lang="zh-cn">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -14,6 +14,7 @@
 <script src="js/include.js"></script>
 <script src="js/uploadImg.js"></script>
 <script src="js/JquerySession.js"></script>
+<script type="text/javascript" src="./js/json.js"></script>
 <script>
 var orderStatus = sessionStorage.getItem('orderStatus');
 var orderId = sessionStorage.getItem("orderId");
@@ -31,18 +32,20 @@ var totalPrice=0//总计金额
     	//$("#afterSaleStatus").html("<strong><b>售后状态：</b><b>已处理</b></strong>");//售后状态
 		//$("#price").attr("display","none");//更改售后原因不可编辑
 		//$("#price").html("<strong><b>总计：</b><b>￥19.30元</b></strong>");
+		var data= {                          //数据
+            "id":orderId, //orderId
+            "currentPage":pages
+        };
 		$.ajax({//根据订单id查询订单详情
              url: "/fresh/order_item/selectAllByOrderId.action",        //后台url
-             data: {                          //数据
-                 id:orderId, //orderId
-                 currentPage:pages
-             },
+             data: JSON.stringify(data),
              type: "POST",                   //类型，POST或者GET
-             dataType: 'json',              //数据返回类型，可以是xml、json等
+             dataType: 'json',     
+             contentType:'application/json;charset=UTF-8',//数据返回类型，可以是xml、json等
              success: function (data) {      //成功，回调函数
                  data = data.list1;
                  for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
-                        $("#order").append("<tr><td>"+data[i].goods_name+"</td><td>data[i].goods_amount</td><td>"+data[i].id+"</td><td>"+data[i].goods_real_price+"</td></tr>");
+                        $("#order").append("<tr><td>"+data[i].goods_name+"</td><td>"+data[i].goods_amount+"</td><td>"+data[i].id+"</td><td>"+data[i].goods_real_price+"</td></tr>");
                     	totalPrice=data[i].goods_amount*data[i].goods_real_price+totalPrice;
                     }
                     if(orderStatus!='1'){//非售后订单详情
