--- a/src/main/webapp/userInfo.html
+++ b/src/main/webapp/userInfo.html
@@ -10,21 +10,20 @@
 <link rel="stylesheet" href="css/admin.css">
 <script src="js/jquery.min.js"></script>
 <script src="js/pintuer.js"></script>
+<script type="text/javascript" src="js/JquerySession.js"></script>
+<script type="text/javascript" src="./js/json.js"></script>
 <script>
+//获取登录用户信息
+var obj = sessionStorage.getItem("user");
+var user = JSON.parse(obj);
 	$(document).ready(function(c) {
 			//初始化方法
 		<!-- 用户对象 -->
-		var user={
-			userName:"Mr wang",
-			userType:1
-		};
-		//获取登录用户信息
-		//var user = JSON.parse(sessionStorage.getItem('user'));
-		//$("#img").html(user.img);	//给用户资料赋值
-		$("#name").val(user.userName);
-		//$("#birthday").html(user.birthdayDate);
-		//$("#userCompany").html(user.userCompany);
-		//$("#userPhone").html(user.userPhone);
+		$("#img").html(user.img);	//给用户资料赋值
+		$("#name").val(user.user_name);
+		$("#birthday").val(user.user_birthday);
+		$("#userCompany").val(user.user_company);
+		$("#userPhone").val(user.user_phone);
 	});
 	function returnLastPage(){//返回上一页
 		window.history.go(-1); // 返回上一页  
