--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -11,33 +11,37 @@
 	
 </script>
 <script src="./js/jquery.min.js"></script>
+<script type="text/javascript" src="js/JquerySession.js"></script>
+<script type="text/javascript" src="js/json.js"></script>
 <script>
 	$(document).ready(function(c) {
 		//初始化方法
 	});
 	function register(){//注册方法
-		checkMessage();
+		//checkMessage();
+		var user={
+				 "user": {
+				      "id": 0,
+				      "user_name": document.getElementById("userLoginAccount").value,
+				      "password": document.getElementById("password").value,
+				      "user_type": "1",
+				      "user_phone": document.getElementById("userLoginAccount").value,
+				      "user_id_type": "1",
+				      "user_id_card": document.getElementById("IdCard").value,
+				      "user_birthday": "",
+				      "user_company": "",
+				      "create_time": "",
+				      "user_last_login_time": "",
+				      "status": "1",
+				      "user_img": ""
+				  }
+		}
 		$.ajax({
 	             url: "/fresh/user/register.action",        //后台url
-	             data: {                          //数据
-	               "user": {
-					      "id": 0,
-					      "user_name": "",
-					      "password": document.getElementById("password").value,
-					      "user_type": 1,
-					      "user_phone": document.getElementById("userLoginAccount").value,
-					      "user_id_type": 1,
-					      "user_id_card": document.getElementById("IdCard").value,
-					      "user_birthday": "",
-					      "user_company": "",
-					      "create_time": "",
-					      "user_last_login_time": "",
-					      "status": 1,
-					      "user_img": ""
-					  }
-	             },
+	             data: JSON.stringify(user),
 	             type: "POST",                   //类型，POST或者GET
 	             dataType: 'json',              //数据返回类型，可以是xml、json等
+	             contentType:'application/json;charset=UTF-8',
 	             success: function (data) {      //成功，回调函数
 	                 //alert(data.result);
 	                 sessionStorage.setItem("user_type","1");
@@ -112,7 +116,7 @@
 			
 				
 		<div class="clear"> </div><div class="submit">
-				<input id="register" type="submit" value="注册" onclick="register()" dir="rtl">
+				<input type="button" value="注册" onclick="register()" dir="rtl">
 			</input>
 			<input type="reset" value="重置"> 
   </div>
