--- a/src/main/webapp/userOrderList.html
+++ b/src/main/webapp/userOrderList.html
@@ -11,6 +11,8 @@
 <script src="js/jquery.js"></script>
 <script src="js/pintuer.js"></script>
 <script src="js/JquerySession.js" type="text/javascript"></script>
+
+<script type="text/javascript" src="./js/json.js"></script>
 <script>
 	var orderStatus=sessionStorage.getItem("orderStatus");
 	if(orderStatus==""||orderStatus==null){
@@ -44,15 +46,15 @@ function findOrderByStatus(orderStatus){
 }
 function findMoreOrderByStatus(){
 	pages+=1;//查找第几页
+	var data =("status":orderStatus,//订单状态
+            "user_id":0,
+            "currentPage":pages);
 	$.ajax({//订单状态查找订单
           url: "/fresh/order/selectUserOrderByStatus.action",        //后台url
-          data: {                          //数据
-	          status:orderStatus,//订单状态
-              user_id:0,
-              currentPage:pages
-          },
+          data: JSON.stringify(data),
           type: "POST",                   //类型，POST或者GET
           dataType: 'json',              //数据返回类型，可以是xml、json等
+          contentType:'application/json;charset=UTF-8',
           success: function (data) {      //成功，回调函数
           	data = data.list1;
           	for(var i=0;i<data.length;i++){
