--- a/src/main/webapp/myBasket.html
+++ b/src/main/webapp/myBasket.html
@@ -12,6 +12,7 @@
 <script src="js/pintuer.js"></script>
 <script src="js/JquerySession.js"></script>
 <script type="text/javascript" src="js/json.js"></script>
+<script type="text/javascript" src="./js/json.js"></script>
 <script>
 	$(document).ready(function(c) {
 		var data ={};
