--- a/src/main/webapp/goodsList.html
+++ b/src/main/webapp/goodsList.html
@@ -22,7 +22,7 @@
 	
 	$(document).ready(function(c) {
      	var data={
-                "goodsType":"",
+                "goodsType":""
                
     		};
 		$.ajax({//查询商品种类
@@ -47,7 +47,7 @@
 	});
 	function getGoods(goodsType){//根据种类查询商品
      	var data={
-                "goodsType":goodsType,
+                "goodsType":goodsType
                
     		};
 	   $.ajax({
