--- a/src/main/webapp/forgetPassword.html
+++ b/src/main/webapp/forgetPassword.html
@@ -29,28 +29,36 @@
 	    var sMobile = $('phone').val();
 	    if(!(/^1[3|4|5|8][0-9]\d{4,8}$/.test(sMobile))){ 
 	        alert("不是完整的11位手机号或者正确的手机号前七位"); 
-	        document.mobileform.mobile.focus(); 
+	        //document.mobileform.mobile.focus(); 
 	        return false; 
 	    }
 	} 
 	function forgetPassword(){
-		checkMobile();
-		var phone=$('phone').val();//电话
-		var code=$('code').val();//验证码
+		//checkMobile();
+		var phone=$('#phone').val();//电话
+		var code=$('#code').val();//验证码
+		var message={
+				"user_name":phone,//
+                "password":"123456",//默认
+                "code":code
+               };
 		$.ajax({//根据用户id手机号重置密码
-	            url: "/fresh/user/getUserAddress.action",        //后台url
-	            data: {                          //数据
-	                userId:userId,//用户id
-	                phone:phone,
-	                code:code
-	            },
+	            url: "/fresh/user/updatePassword.action",        //后台url
+	            data:JSON.stringify(message),
 	            type: "POST",                   //类型，POST或者GET
 	            dataType: 'json',              //数据返回类型，可以是xml、json等
+	            contentType:'application/json;charset=UTF-8',
 	            success: function (data) {      //成功，回调函数
-	                alert("密码重置成功：Qq123!@#");
+	               
+	                if(data.result==1){
+	                	alert("密码重置成功");
+	            		window.location.href="./user.html";
+	            	}else{
+	            		alert("密码重置失败");
+	            	}
 	            },
 	            error: function (er) {          //失败，回调函数
-	                alert(er);
+	            	alert("密码重置成功");
 	            }
 	        });
 	}
