--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -98,7 +98,7 @@
 				    	<li style="float:left;padding:0.2em;"><a href="./myBasket.html">我的菜篮</a></li>
 				    	<li style="float:left;padding:0.2em;"><a href="./userOrderList.html">我的订单</a></li>
 				    	<li style="float:left;padding:0.2em;"><a href="./userBill.html">结算中心</a></li>
-				    	<li style="float:left;padding:0.2em;"><a href="./userInfo.html">个人中心</a></li>
+				    	<li style="float:left;padding:0.2em;"><a href="./user.html">个人中心</a></li>
 			    	</ul>
 			    </div>
 			</td></tr>
