--- a/src/main/webapp/editPassword.html
+++ b/src/main/webapp/editPassword.html
@@ -18,6 +18,7 @@
 	var user =JSON.parse(obj);//user对象 
 	var userId=user.id;//全局变量
 	$(document).ready(function(c) {
+		$('#phone').val(user.user_name);
 	});
 	function returnLastPage(){//返回上一页
 		window.history.go(-1); 
@@ -28,44 +29,57 @@
 		var newPassword1=$('#newPassword1').val();
 		var newPassword2=$('#newPassword2').val();
 		checkMessage();
+		var data={                          //数据
+            "user_name":phone,
+            //oldPassword:oldPassword,
+            "password":newPassword1
+        };
 		$.ajax({//根据手机号修改密码
             url: "/fresh/user/updatePassword.action",        //后台url
-            data: {                          //数据
-                user_name:phone,
-                //oldPassword:oldPassword,
-                password:newPassword
-            },
+            data: JSON.stringify(data),
             type: "POST",                   //类型，POST或者GET
             dataType: 'json',              //数据返回类型，可以是xml、json等
+            contentType:'application/json;charset=UTF-8',
             success: function (data) {      //成功，回调函数
-                alert("修改密码成功");
+            	if(data.result==1){
+            		alert("修改密码成功");
+            		window.location.href="./user.html";
+            	}else{
+            		alert("修改密码失败");
+            	}
+                
             },
             error: function (er) {          //失败，回调函数
-                alert(er);
+            	alert("修改密码失败");
             }
         });
 		
 	}
 	function checkMessage(){ //信息校验
 		//手机号验证
-	    var sMobile = $('#phone').val();
-	    if(!(/^1[3|4|5|8][0-9]\d{4,8}$/.test(sMobile))){ 
-	        alert("不是完整的11位手机号或者正确的手机号前七位"); 
-	        document.mobileform.mobile.focus(); 
-	        return false; 
-	    }
-	    var pPattern = /^.*(?=.{6,})(?=.*\d)(?=.*[A-Z])(?=.*[a-z])(?=.*[!@#$%^&*? ]).*$/;
+	//    var sMobile = $('#phone').val();
+	//    if(!(/^1[3|4|5|8][0-9]\d{4,8}$/.test(sMobile))){ 
+	//        alert("不是完整的11位手机号或者正确的手机号前七位"); 
+	//        document.mobileform.mobile.focus(); 
+	//        return false; 
+	//    }
+	//    var pPattern = /^.*(?=.{6,})(?=.*\d)(?=.*[A-Z])(?=.*[a-z])(?=.*[!@#$%^&*? ]).*$/;
 	    var password=$('#newPassword1').val();
 	    var repassword=$('#newPassword2').val();
-		if(!pPattern.test(password)){//密码验证
-			alert("密码最少6位，包括至少1个大写字母，1个小写字母，1个数字，1个特殊字符");
-			document.mobileform.mobile.focus(); 
-			return false;
-		} else if(password!=repassword){
+	//    if(!pPattern.test(password)){//密码验证
+	//		alert("密码最少6位，包括至少1个大写字母，1个小写字母，1个数字，1个特殊字符");
+	//		document.mobileform.mobile.focus(); 
+	//		return false;
+	//	} else if(password!=repassword){
+	//		alert("两次密码输入不一致");
+	//		document.mobileform.mobile.focus(); 
+	//		return false;
+		if(password!=repassword){
 			alert("两次密码输入不一致");
 			document.mobileform.mobile.focus(); 
 			return false;
 		}
+		
 	} 
 	
 </script>
@@ -95,8 +109,8 @@
           <td></td>
         </tr>
         <tr>
-        	<td>手机号：</td>
-        	<td><input type="text" id="phone"></input></td>
+        	<td>用户名：</td>
+        	<td><input type="text" id="phone" disabled="true"></input></td>
         </tr>
         <tr>
         	<td>旧密码：</td>
