--- a/src/main/webapp/myAddress.html
+++ b/src/main/webapp/myAddress.html
@@ -11,30 +11,31 @@
 <script src="js/jquery.js"></script>
 <script src="js/pintuer.js"></script>
 <script src="js/JquerySession.js"></script>
-<script src="js/jquery.cookie.js" type="text/javascript"></script>
 <script type="text/javascript">
 	var obj = sessionStorage.getItem('user');//{"userName":"Mr wang","userType":1}
 	var user =JSON.parse(obj);//user对象 
+	var data;
 	$(document).ready(function(c) {
 			//初始化方法
-			$('#addressSelect').append("<option  value='addressId'>贵州省贵阳市观山湖XXX</option>");
+		var message = {
+				"userId":user.id   //用户id	
+		};
 		$.ajax({//查询我的收获地址
-	             url: "fresh/address/findAddressByUserId.action",        //后台url
-	             data: {                          //数据
-	                 userId:user.id   //用户id
-	             },
+	             url: "/fresh/address/findAddressByUserId.action",        //后台url
+	             data: JSON.stringify(message),
 	             type: "POST",                   //类型，POST或者GET
 	             dataType: 'json',              //数据返回类型，可以是xml、json等
+	             contentType:'application/json;charset=UTF-8',
 	             success: function (data) {      //成功，回调函数    画页面
 	                 	//alert(data.result);
 	                 	data=data.addressList;
 	                  for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
 	                  	if(data[i].isDefault==1){
-	                  	   $("#addressList").append("<table class='table table-hover text-center'><tr><td rowspan='3'>默认收货地址：</td><td>地址：</td><td>"+data[i].address_detail+"</td></tr><tr><td>电话：</td><td>"+data[i].phone+"</td></tr><tr><td>收货人：</td><td>"+data[i].receiver+"</td></tr></table>");
+	                  	   $("#addressList").append("<tr><td rowspan='3'>默认收货地址：</td><td>地址：</td><td>"+data[i].address_detail+"</td></tr><tr><td>电话：</td><td>"+data[i].receiver_phone+"</td></tr><tr><td>收货人：</td><td>"+data[i].receiver+"</td></tr>");
 	                  	}else{
-	                  	   $("#addressList").append("<table class='table table-hover text-center'><tr><td rowspan='3'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td><td>地址：</td><td>"+data[i].addressDetail+"</td></tr><tr><td>电话：</td><td>"+data[i].phone+"</td></tr><tr><td>收货人：</td><td>"+data[i].receiver+"</td></tr></table>");
+	                  	   $("#addressList").append("<tr><td rowspan='3'></td><td>地址：</td><td>"+data[i].address_detail+"</td></tr><tr><td>电话：</td><td>"+data[i].receiver_phone+"</td></tr><tr><td>收货人：</td><td>"+data[i].receiver+"</td></tr>");
 	                  	}
-	                  	$('#addressSelect').append("<option  value='"+data[i].addressId+"'>"+data[i].addressDetail+"</option>");
+	                  	$('#addressSelect').append("<option  value='"+data[i].id+"'>"+data[i].address_detail+"</option>");
                      }
 	             },
 	             error: function (er) {          //失败，回调函数
@@ -49,7 +50,7 @@
 	function setDefaultAddress(){//设为默认地址
 		var addressId=$('#addressSelect').val();
 		$.ajax({//将地址设为默认收货地址
-	             url: "/fresh/user/setDefaultAddress.action",        //后台url
+	             url: "/fresh/address/setDefaultAddress.action",        //后台url
 	             data: {                          //数据
 	                 userId:user.id   , //用户id
 	                 addressId:addressId
@@ -90,13 +91,12 @@
     <table class="table table-hover text-center" id="addressList">
       </table>
         <table class="table table-hover text-center">
-        
         <tr>
           <td rowspan="2">
           	<select id="addressSelect">
           	</select>
           </td>
-          <td style="float:center"><input type="submit" onclick="setDefaultAddress()" value="设为默认地址"></input></td>
+          <td style="float:center"><!-- <input type="submit" onclick="setDefaultAddress()" value="设为默认地址"></input> --></td>
         </tr>
         <tr>
           <td style="float:center">
