--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -12,22 +12,19 @@
 <script src="js/pintuer.js"></script>
 <script src="js/jquery.cookie.js" type="text/javascript"></script>
 <script>
-	
+var obj = sessionStorage.getItem("user");
+var user = JSON.parse(obj);	
 	$(document).ready(function(c) {
 			//初始化方法
 		<!-- 用户对象 -->
-		var user={
-			userName:"Mr wang",
-			userType:1
-		};
 		//获取登录用户信息
 		//var user = JSON.parse(sessionStorage.getItem('user'));
-		//$("#img").html(user.img);	//给用户资料赋值
-		$("#name").val(user.userName);
-		//$("#birthday").html(user.birthdayDate);
-		//$("#userCompany").html(user.userCompany);
-		//$("#userPhone").html(user.userPhone);
-		var showchar = document.getElementById("userInfo").style.display ="block";
+	//	$("#img").html(user.img);	//给用户资料赋值
+	//	$("#name").val(user.user_name);
+	//	$("#birthday").val(user.user_birthday);
+	//	$("#userCompany").val(user.user_company);
+	//	$("#userPhone").val(user.user_phone);
+	//	var showchar = document.getElementById("userInfo").style.display ="block";
 		
 	});
 	function openUserInfo(obj){//页面刷新
